lib_LTLIBRARIES = libjglut.la
library_includedir = $(includedir)

if WIN32
  libjglut_la_LDFLAGS = -avoid-version -no-undefined
else
  libjglut_la_LDFLAGS = -avoid-version
endif

libjglut_la_SOURCES =\
Java_net_pflager_gles2_JNI.c\
_DPRINTF_.c\
array_length_from_pname.c\
arrayOfDoublesToString.c\
arrayOfFloatsToString.c\
arrayOfPointersToString.c\
Java_com_pflager_gl_DisposeResources.c\
Java_com_pflager_gl_glAccum__ID.c\
Java_com_pflager_gl_glAccum__IF.c\
Java_com_pflager_gl_glAlphaFunc__ID.c\
Java_com_pflager_gl_glAlphaFunc__IF.c\
Java_com_pflager_gl_glArrayElement.c\
Java_com_pflager_gl_glBegin.c\
Java_com_pflager_gl_glBindTexture.c\
Java_com_pflager_gl_glBitmap__IIDDDD_3B.c\
Java_com_pflager_gl_glBitmap__IIDDDD_3S.c\
Java_com_pflager_gl_glBitmap__IIFFFF_3B.c\
Java_com_pflager_gl_glBitmap__IIFFFF_3S.c\
Java_com_pflager_gl_glBlendFunc.c\
Java_com_pflager_gl_glCallList.c\
Java_com_pflager_gl_glCallLists__II_3B.c\
Java_com_pflager_gl_glCallLists__II_3F.c\
Java_com_pflager_gl_glCallLists__II_3I.c\
Java_com_pflager_gl_glCallLists__II_3S.c\
Java_com_pflager_gl_glClear.c\
Java_com_pflager_gl_glClearAccum__DDDD.c\
Java_com_pflager_gl_glClearAccum__FFFF.c\
Java_com_pflager_gl_glClearColor__DDDD.c\
Java_com_pflager_gl_glClearColor__FFFF.c\
Java_com_pflager_gl_glClearDepth.c\
Java_com_pflager_gl_glClearIndex__D.c\
Java_com_pflager_gl_glClearIndex__F.c\
Java_com_pflager_gl_glClearStencil.c\
Java_com_pflager_gl_glClipPlane.c\
Java_com_pflager_gl_glColor3b.c\
Java_com_pflager_gl_glColor3bv.c\
Java_com_pflager_gl_glColor3d.c\
Java_com_pflager_gl_glColor3dv.c\
Java_com_pflager_gl_glColor3f__DDD.c\
Java_com_pflager_gl_glColor3f__FFF.c\
Java_com_pflager_gl_glColor3fv___3D.c\
Java_com_pflager_gl_glColor3fv___3F.c\
Java_com_pflager_gl_glColor3i.c\
Java_com_pflager_gl_glColor3iv.c\
Java_com_pflager_gl_glColor3s.c\
Java_com_pflager_gl_glColor3sv.c\
Java_com_pflager_gl_glColor3ub.c\
Java_com_pflager_gl_glColor3ubv.c\
Java_com_pflager_gl_glColor3ui.c\
Java_com_pflager_gl_glColor3uiv.c\
Java_com_pflager_gl_glColor3us.c\
Java_com_pflager_gl_glColor4b.c\
Java_com_pflager_gl_glColor4d.c\
Java_com_pflager_gl_glColor4dv.c\
Java_com_pflager_gl_glColor4f__DDDD.c\
Java_com_pflager_gl_glColor4f__FFFF.c\
Java_com_pflager_gl_glColor4fv___3D.c\
Java_com_pflager_gl_glColor4fv___3F.c\
Java_com_pflager_gl_glColor4i.c\
Java_com_pflager_gl_glColor4s.c\
Java_com_pflager_gl_glColor4ub.c\
Java_com_pflager_gl_glColor4ui.c\
Java_com_pflager_gl_glColor4us.c\
Java_com_pflager_gl_glColorMask.c\
Java_com_pflager_gl_glColorMaterial.c\
Java_com_pflager_gl_glColorPointer__III_3D.c\
Java_com_pflager_gl_glColorPointer__III_3F.c\
Java_com_pflager_gl_glColorPointer__III_3I.c\
Java_com_pflager_gl_glColorPointer__III_3S.c\
Java_com_pflager_gl_glCopyPixels.c\
Java_com_pflager_gl_glCullFace.c\
Java_com_pflager_gl_glDeleteLists.c\
Java_com_pflager_gl_glDepthFunc.c\
Java_com_pflager_gl_glDepthMask__I.c\
Java_com_pflager_gl_glDepthMask__Z.c\
Java_com_pflager_gl_glDepthRange.c\
Java_com_pflager_gl_glDisable.c\
Java_com_pflager_gl_glDisableClientState.c\
Java_com_pflager_gl_glDrawArrays.c\
Java_com_pflager_gl_glDrawBuffer.c\
Java_com_pflager_gl_glDrawElements__III_3B.c\
Java_com_pflager_gl_glDrawElements__III_3I.c\
Java_com_pflager_gl_glDrawPixels.c\
Java_com_pflager_gl_glDrawElements__III_3S.c\
Java_com_pflager_gl_glEdgeFlag__I.c\
Java_com_pflager_gl_glEdgeFlag__Z.c\
Java_com_pflager_gl_glEdgeFlagv___3I.c\
Java_com_pflager_gl_glEdgeFlagv___3Z.c\
Java_com_pflager_gl_glEnable.c\
Java_com_pflager_gl_glEnableClientState.c\
Java_com_pflager_gl_glEnd.c\
Java_com_pflager_gl_glEndList.c\
Java_com_pflager_gl_glFogf__ID.c\
Java_com_pflager_gl_glFogf__IF.c\
Java_com_pflager_gl_glFogfv__I_3D.c\
Java_com_pflager_gl_glFogfv__I_3F.c\
Java_com_pflager_gl_glFogi.c\
Java_com_pflager_gl_glFogiv.c\
Java_com_pflager_gl_glGenLists.c\
Java_com_pflager_gl_glGenTextures__I.c\
Java_com_pflager_gl_glGenTextures__I_3I.c\
Java_com_pflager_gl_glGetClipPlane__I.c\
Java_com_pflager_gl_glGetClipPlane__I_3D.c\
Java_com_pflager_gl_glGetError.c\
Java_com_pflager_gl_glGetString.c\
Java_com_pflager_gl_glEvalCoord1d.c\
Java_com_pflager_gl_glEvalCoord1dv.c\
Java_com_pflager_gl_glEvalCoord1f.c\
Java_com_pflager_gl_glEvalCoord1fv.c\
Java_com_pflager_gl_glEvalCoord2d.c\
Java_com_pflager_gl_glEvalCoord2f.c\
Java_com_pflager_gl_glEvalCoord2dv.c\
Java_com_pflager_gl_glEvalCoord2fv.c\
Java_com_pflager_gl_glEvalMesh1.c\
Java_com_pflager_gl_glEvalMesh2.c\
Java_com_pflager_gl_glEvalPoint1.c\
Java_com_pflager_gl_glEvalPoint2.c\
Java_com_pflager_gl_glFinish.c\
Java_com_pflager_gl_glFlush.c\
Java_com_pflager_gl_glFrontFace.c\
Java_com_pflager_gl_glFrustum.c\
Java_com_pflager_gl_glGetBooleanv__I.c\
Java_com_pflager_gl_glGetBooleanv__I_3Z.c\
Java_com_pflager_gl_glGetDoublev__I.c\
Java_com_pflager_gl_glGetDoublev__I_3D.c\
Java_com_pflager_gl_glGetFloatv__I.c\
Java_com_pflager_gl_glGetFloatv__I_3D.c\
Java_com_pflager_gl_glGetFloatv__I_3F.c\
Java_com_pflager_gl_glGetIntegerv__I.c\
Java_com_pflager_gl_glGetIntegerv__I_3I.c\
Java_com_pflager_gl_glGetPolygonStipple__.c\
Java_com_pflager_gl_glGetPolygonStipple__B.c\
Java_com_pflager_gl_glGetPolygonStipple__I.c\
Java_com_pflager_gl_glGetPolygonStipple___3B.c\
Java_com_pflager_gl_glGetPolygonStipple___3I.c\
Java_com_pflager_gl_glHint.c\
Java_com_pflager_gl_glIndexd.c\
Java_com_pflager_gl_glIndexdv.c\
Java_com_pflager_gl_glIndexf__D.c\
Java_com_pflager_gl_glIndexf__F.c\
Java_com_pflager_gl_glIndexfv___3D.c\
Java_com_pflager_gl_glIndexfv___3F.c\
Java_com_pflager_gl_glIndexi.c\
Java_com_pflager_gl_glIndexiv.c\
Java_com_pflager_gl_glIndexs.c\
Java_com_pflager_gl_glIndexsv.c\
Java_com_pflager_gl_glIndexub.c\
Java_com_pflager_gl_glIndexubv.c\
Java_com_pflager_gl_glIndexMask.c\
Java_com_pflager_gl_glInterleavedArrays__II_3D.c\
Java_com_pflager_gl_glInterleavedArrays__II_3F.c\
Java_com_pflager_gl_glInterleavedArrays__II_3I.c\
Java_com_pflager_gl_glIsEnabled.c\
Java_com_pflager_gl_glIsList.c\
Java_com_pflager_gl_glLightModeldv.c\
Java_com_pflager_gl_glLightModelf__ID.c\
Java_com_pflager_gl_glLightModelf__IF.c\
Java_com_pflager_gl_glLightModelfv__I_3D.c\
Java_com_pflager_gl_glLightModelfv__I_3F.c\
Java_com_pflager_gl_glLightModeli.c\
Java_com_pflager_gl_glLightModeliv.c\
Java_com_pflager_gl_glLightf__IID.c\
Java_com_pflager_gl_glLightf__IIF.c\
Java_com_pflager_gl_glLightfv__II_3D.c\
Java_com_pflager_gl_glLightfv__II_3F.c\
Java_com_pflager_gl_glLighti.c\
Java_com_pflager_gl_glLightiv.c\
Java_com_pflager_gl_glLineStipple__II.c\
Java_com_pflager_gl_glLineWidth.c\
Java_com_pflager_gl_glListBase.c\
Java_com_pflager_gl_glLoadIdentity.c\
Java_com_pflager_gl_glLoadMatrixd.c\
Java_com_pflager_gl_glLoadMatrixf.c\
Java_com_pflager_gl_glLogicOp.c\
Java_com_pflager_gl_glMap1d.c\
Java_com_pflager_gl_glMap1f.c\
Java_com_pflager_gl_glMap2d.c\
Java_com_pflager_gl_glMap2f.c\
Java_com_pflager_gl_glMapGrid1d.c\
Java_com_pflager_gl_glMapGrid1f.c\
Java_com_pflager_gl_glMapGrid2d.c\
Java_com_pflager_gl_glMapGrid2f.c\
Java_com_pflager_gl_glMaterialf__IID.c\
Java_com_pflager_gl_glMaterialf__IIF.c\
Java_com_pflager_gl_glMateriali.c\
Java_com_pflager_gl_glMaterialiv.c\
Java_com_pflager_gl_glMaterialfv__II_3D.c\
Java_com_pflager_gl_glMaterialfv__II_3F.c\
Java_com_pflager_gl_glMatrixMode.c\
Java_com_pflager_gl_glMultMatrixd.c\
Java_com_pflager_gl_glMultMatrixf.c\
Java_com_pflager_gl_glNewList.c\
Java_com_pflager_gl_glNormal3b.c\
Java_com_pflager_gl_glNormal3bv.c\
Java_com_pflager_gl_glNormal3d.c\
Java_com_pflager_gl_glNormal3dv.c\
Java_com_pflager_gl_glNormal3f__DDD.c\
Java_com_pflager_gl_glNormal3f__FFF.c\
Java_com_pflager_gl_glNormal3fv___3D.c\
Java_com_pflager_gl_glNormal3fv___3F.c\
Java_com_pflager_gl_glNormal3i.c\
Java_com_pflager_gl_glNormal3iv.c\
Java_com_pflager_gl_glNormal3s.c\
Java_com_pflager_gl_glNormal3sv.c\
Java_com_pflager_gl_glOrtho.c\
Java_com_pflager_gl_glPixelStoref__ID.c\
Java_com_pflager_gl_glPixelStoref__IF.c\
Java_com_pflager_gl_glPixelStorei.c\
Java_com_pflager_gl_glPixelTransferf__ID.c\
Java_com_pflager_gl_glPixelTransferf__IF.c\
Java_com_pflager_gl_glPixelTransferi.c\
Java_com_pflager_gl_glPixelZoom__DD.c\
Java_com_pflager_gl_glPixelZoom__FF.c\
Java_com_pflager_gl_glPointSize.c\
Java_com_pflager_gl_glPolygonMode.c\
Java_com_pflager_gl_glPolygonOffset__DD.c\
Java_com_pflager_gl_glPolygonOffset__FF.c\
Java_com_pflager_gl_glPolygonStipple___3B.c\
Java_com_pflager_gl_glPolygonStipple___3I.c\
Java_com_pflager_gl_glPopAttrib.c\
Java_com_pflager_gl_glPopClientAttrib.c\
Java_com_pflager_gl_glPopMatrix.c\
Java_com_pflager_gl_glPushAttrib.c\
Java_com_pflager_gl_glPushClientAttrib.c\
Java_com_pflager_gl_glPushMatrix.c\
Java_com_pflager_gl_glRasterPos2d.c\
Java_com_pflager_gl_glRasterPos2dv.c\
Java_com_pflager_gl_glRasterPos2f__DD.c\
Java_com_pflager_gl_glRasterPos2f__FF.c\
Java_com_pflager_gl_glRasterPos2fv___3D.c\
Java_com_pflager_gl_glRasterPos2fv___3F.c\
Java_com_pflager_gl_glRasterPos2i.c\
Java_com_pflager_gl_glRasterPos2iv.c\
Java_com_pflager_gl_glRasterPos2s.c\
Java_com_pflager_gl_glRasterPos2sv.c\
Java_com_pflager_gl_glRasterPos3d.c\
Java_com_pflager_gl_glRasterPos3dv.c\
Java_com_pflager_gl_glRasterPos3f__DDD.c\
Java_com_pflager_gl_glRasterPos3f__FFF.c\
Java_com_pflager_gl_glRasterPos3fv___3D.c\
Java_com_pflager_gl_glRasterPos3fv___3F.c\
Java_com_pflager_gl_glRasterPos3i.c\
Java_com_pflager_gl_glRasterPos3iv.c\
Java_com_pflager_gl_glRasterPos3s.c\
Java_com_pflager_gl_glRasterPos3sv.c\
Java_com_pflager_gl_glRasterPos4d.c\
Java_com_pflager_gl_glRasterPos4dv.c\
Java_com_pflager_gl_glRasterPos4f__DDDD.c\
Java_com_pflager_gl_glRasterPos4f__FFFF.c\
Java_com_pflager_gl_glRasterPos4fv___3D.c\
Java_com_pflager_gl_glRasterPos4fv___3F.c\
Java_com_pflager_gl_glRasterPos4i.c\
Java_com_pflager_gl_glRasterPos4iv.c\
Java_com_pflager_gl_glRasterPos4s.c\
Java_com_pflager_gl_glRasterPos4sv.c\
Java_com_pflager_gl_glReadPixels__IIIIII_3B.c\
Java_com_pflager_gl_glRectd.c\
Java_com_pflager_gl_glRectdv.c\
Java_com_pflager_gl_glRectf__DDDD.c\
Java_com_pflager_gl_glRectfv___3D_3D.c\
Java_com_pflager_gl_glRectfv___3F_3F.c\
Java_com_pflager_gl_glRecti.c\
Java_com_pflager_gl_glRectiv.c\
Java_com_pflager_gl_glRects.c\
Java_com_pflager_gl_glRectsv.c\
Java_com_pflager_gl_glRenderMode.c\
Java_com_pflager_gl_glRotated.c\
Java_com_pflager_gl_glRotatef__DDDD.c\
Java_com_pflager_gl_glRotatef__FFFF.c\
Java_com_pflager_gl_glScaled.c\
Java_com_pflager_gl_glScalef.c\
Java_com_pflager_gl_glScissor.c\
Java_com_pflager_gl_glShadeModel.c\
Java_com_pflager_gl_glStencilFunc.c\
Java_com_pflager_gl_glStencilMask.c\
Java_com_pflager_gl_glStencilOp.c\
Java_com_pflager_gl_glTexCoord1d.c\
Java_com_pflager_gl_glTexCoord1dv.c\
Java_com_pflager_gl_glTexCoord1f.c\
Java_com_pflager_gl_glTexCoord1fv___3D.c\
Java_com_pflager_gl_glTexCoord1fv___3F.c\
Java_com_pflager_gl_glTexCoord1i.c\
Java_com_pflager_gl_glTexCoord1iv.c\
Java_com_pflager_gl_glTexCoord1s.c\
Java_com_pflager_gl_glTexCoord1sv.c\
Java_com_pflager_gl_glTexCoord2d.c\
Java_com_pflager_gl_glTexCoord2dv.c\
Java_com_pflager_gl_glTexCoord2f__DD.c\
Java_com_pflager_gl_glTexCoord2f__FF.c\
Java_com_pflager_gl_glTexCoord2fv___3D.c\
Java_com_pflager_gl_glTexCoord2fv___3F.c\
Java_com_pflager_gl_glTexCoord2i.c\
Java_com_pflager_gl_glTexCoord2iv.c\
Java_com_pflager_gl_glTexCoord2s.c\
Java_com_pflager_gl_glTexCoord2sv.c\
Java_com_pflager_gl_glTexCoord3d.c\
Java_com_pflager_gl_glTexCoord3dv.c\
Java_com_pflager_gl_glTexCoord3f__DDD.c\
Java_com_pflager_gl_glTexCoord3f__FFF.c\
Java_com_pflager_gl_glTexCoord3fv___3D.c\
Java_com_pflager_gl_glTexCoord3fv___3F.c\
Java_com_pflager_gl_glTexCoord3i.c\
Java_com_pflager_gl_glTexCoord3iv.c\
Java_com_pflager_gl_glTexCoord3s.c\
Java_com_pflager_gl_glTexCoord3sv.c\
Java_com_pflager_gl_glTexCoord4d.c\
Java_com_pflager_gl_glTexCoord4dv.c\
Java_com_pflager_gl_glTexCoord4f__DDDD.c\
Java_com_pflager_gl_glTexCoord4f__FFFF.c\
Java_com_pflager_gl_glTexCoord4fv___3D.c\
Java_com_pflager_gl_glTexCoord4fv___3F.c\
Java_com_pflager_gl_glTexCoord4i.c\
Java_com_pflager_gl_glTexCoord4iv.c\
Java_com_pflager_gl_glTexCoord4s.c\
Java_com_pflager_gl_glTexCoord4sv.c\
Java_com_pflager_gl_glTexEnvf__IID.c\
Java_com_pflager_gl_glTexEnvf__IIF.c\
Java_com_pflager_gl_glTexGend.c\
Java_com_pflager_gl_glTexGendv.c\
Java_com_pflager_gl_glTexGenfv__II_3D.c\
Java_com_pflager_gl_glTexGenfv__II_3F.c\
Java_com_pflager_gl_glTexGeni.c\
Java_com_pflager_gl_glTexGeniv__II_3I.c\
Java_com_pflager_gl_glTexGeniv__II_3S.c\
Java_com_pflager_gl_glTexImage1D__IIIIIII_3B.c\
Java_com_pflager_gl_glTexImage1D__IIIIIII_3F.c\
Java_com_pflager_gl_glTexImage1D__IIIIIII_3I.c\
Java_com_pflager_gl_glTexImage1D__IIIIIII_3S.c\
Java_com_pflager_gl_glTexImage2D__IIIIIIII_3B.c\
Java_com_pflager_gl_glTexImage2D__IIIIIIII_3S.c\
Java_com_pflager_gl_glTexParameteri.c\
Java_com_pflager_gl_glTexSubImage2D__IIIIIIII_3B.c\
Java_com_pflager_gl_glTexSubImage2D__IIIIIIII_3S.c\
Java_com_pflager_gl_glTranslated.c\
Java_com_pflager_gl_glTranslatef.c\
Java_com_pflager_gl_glVertex2d.c\
Java_com_pflager_gl_glVertex2dv.c\
Java_com_pflager_gl_glVertex2f__DD.c\
Java_com_pflager_gl_glVertex2f__FF.c\
Java_com_pflager_gl_glVertex2fv.c\
Java_com_pflager_gl_glVertex2iv.c\
Java_com_pflager_gl_glVertex2s__II.c\
Java_com_pflager_gl_glVertex2s__SS.c\
Java_com_pflager_gl_glVertex2sv.c\
Java_com_pflager_gl_glVertex3d.c\
Java_com_pflager_gl_glVertex3dv.c\
Java_com_pflager_gl_glVertex3f__DDD.c\
Java_com_pflager_gl_glVertex3f__FFF.c\
Java_com_pflager_gl_glVertex3fv___3D.c\
Java_com_pflager_gl_glVertex3fv___3F.c\
Java_com_pflager_gl_glVertex3i.c\
Java_com_pflager_gl_glVertex3iv.c\
Java_com_pflager_gl_glVertex3s__III.c\
Java_com_pflager_gl_glVertex3s__SSS.c\
Java_com_pflager_gl_glVertex3sv.c\
Java_com_pflager_gl_glVertex4d.c\
Java_com_pflager_gl_glVertex4dv.c\
Java_com_pflager_gl_glVertex4f__DDDD.c\
Java_com_pflager_gl_glVertex4f__FFFF.c\
Java_com_pflager_gl_glVertex4fv___3D.c\
Java_com_pflager_gl_glVertex4fv___3F.c\
Java_com_pflager_gl_glVertex4i.c\
Java_com_pflager_gl_glVertex4iv.c\
Java_com_pflager_gl_glVertex4s__IIII.c\
Java_com_pflager_gl_glVertex4s__SSSS.c\
Java_com_pflager_gl_glVertex4sv.c\
Java_com_pflager_gl_glVertexPointer__III_3D.c\
Java_com_pflager_gl_glVertexPointer__III_3F.c\
Java_com_pflager_gl_glVertexPointer__III_3I.c\
Java_com_pflager_gl_glVertexPointer__III_3S.c\
Java_com_pflager_gl_glViewport.c\
Java_com_pflager_glu_gluBeginCurve.c\
Java_com_pflager_glu_gluBeginSurface.c\
Java_com_pflager_glu_gluBeginPolygon.c\
Java_com_pflager_glu_gluBeginTrim.c\
Java_com_pflager_glu_gluCylinder.c\
Java_com_pflager_glu_gluDeleteNurbsRenderer.c\
Java_com_pflager_glu_gluDeleteQuadric.c\
Java_com_pflager_glu_gluDeleteTess.c\
Java_com_pflager_glu_gluDisk.c\
Java_com_pflager_glu_gluEndCurve.c\
Java_com_pflager_glu_gluEndSurface.c\
Java_com_pflager_glu_gluEndPolygon.c\
Java_com_pflager_glu_gluEndTrim.c\
Java_com_pflager_glu_gluErrorString.c\
Java_com_pflager_glu_gluLookAt.c\
Java_com_pflager_glu_gluNewNurbsRenderer.c\
Java_com_pflager_glu_gluNewQuadric.c\
Java_com_pflager_glu_gluNewTess.c\
Java_com_pflager_glu_gluNurbsCallback.c\
Java_com_pflager_glu_gluNurbsCurve.c\
Java_com_pflager_glu_gluNurbsProperty.c\
Java_com_pflager_glu_gluNurbsSurface.c\
Java_com_pflager_glu_gluOrtho2D.c\
Java_com_pflager_glu_gluPartialDisk.c\
Java_com_pflager_glu_gluPerspective.c\
Java_com_pflager_glu_gluPwlCurve.c\
Java_com_pflager_glu_gluQuadricCallback.c\
Java_com_pflager_glu_gluQuadricDrawStyle.c\
Java_com_pflager_glu_gluQuadricNormals.c\
Java_com_pflager_glu_gluSphere.c\
Java_com_pflager_glu_gluTessBeginContour.c\
Java_com_pflager_glu_gluTessBeginPolygon.c\
Java_com_pflager_glu_gluTessCallbackNative.c\
Java_com_pflager_glu_gluTessEndContour.c\
Java_com_pflager_glu_gluTessEndPolygon.c\
Java_com_pflager_glu_gluTessProperty.c\
Java_com_pflager_glu_gluTessVertex.c\
Java_com_pflager_glu_gluUnProject__DDD_3D_3D_3I.c\
Java_com_pflager_glu_gluUnProject__DDD_3D_3D_3I_3D.c\
Java_com_pflager_glu_gluUnProject___3D_3D_3D_3I.c\
Java_com_pflager_glu_gluUnProject___3D_3D_3D_3I_3D.c\
Java_com_pflager_glut_glutBitmapCharacter.c\
Java_com_pflager_glut_glutCopyColormap.c\
Java_com_pflager_glut_glutCreateWindow.c\
Java_com_pflager_glut_glutDisplayFunc.c\
Java_com_pflager_glut_glutGet.c\
Java_com_pflager_glut_glutGetOption.c\
Java_com_pflager_glut_glutGetColor.c\
Java_com_pflager_glut_glutIdleFunc.c\
Java_com_pflager_glut_glutInitDisplayMode.c\
Java_com_pflager_glut_glutInitWindowPosition.c\
Java_com_pflager_glut_glutInitWindowSize.c\
Java_com_pflager_glut_glutInit__.c\
Java_com_pflager_glut_glutInit__I_3Ljava_lang_String_2.c\
Java_com_pflager_glut_glutInit__Ljava_lang_String_2.c\
Java_com_pflager_glut_glutInit___3Ljava_lang_String_2.c\
Java_com_pflager_glut_glutKeyboardFunc.c\
Java_com_pflager_glut_glutLeaveMainLoop.c\
Java_com_pflager_glut_glutMainLoop.c\
Java_com_pflager_glut_glutMotionFunc.c\
Java_com_pflager_glut_glutMouseFunc.c\
Java_com_pflager_glut_glutPostRedisplay.c\
Java_com_pflager_glut_glutReshapeFunc.c\
Java_com_pflager_glut_glutSet.c\
Java_com_pflager_glut_glutSetDebug.c\
Java_com_pflager_glut_glutSetColor__IDDD.c\
Java_com_pflager_glut_glutSetColor__IFFF.c\
Java_com_pflager_glut_glutSetOption.c\
Java_com_pflager_glut_glutSolidCone.c\
Java_com_pflager_glut_glutSolidCube.c\
Java_com_pflager_glut_glutSolidCylinder.c\
Java_com_pflager_glut_glutSolidDodecahedron.c\
Java_com_pflager_glut_glutSolidIcosahedron.c\
Java_com_pflager_glut_glutSolidOctahedron.c\
Java_com_pflager_glut_glutSolidRhombicDodecahedron.c\
Java_com_pflager_glut_glutSolidSierpinskiSponge.c\
Java_com_pflager_glut_glutSolidSphere.c\
Java_com_pflager_glut_glutSolidTeacup.c\
Java_com_pflager_glut_glutSolidTeapot.c\
Java_com_pflager_glut_glutSolidTeaspoon.c\
Java_com_pflager_glut_glutSolidTetrahedron.c\
Java_com_pflager_glut_glutSolidTorus.c\
Java_com_pflager_glut_glutSwapBuffers.c\
Java_com_pflager_glut_glutWireCone.c\
Java_com_pflager_glut_glutWireCube.c\
Java_com_pflager_glut_glutWireCylinder.c\
Java_com_pflager_glut_glutWireDodecahedron.c\
Java_com_pflager_glut_glutWireIcosahedron.c\
Java_com_pflager_glut_glutWireOctahedron.c\
Java_com_pflager_glut_glutWireRhombicDodecahedron.c\
Java_com_pflager_glut_glutWireSierpinskiSponge.c\
Java_com_pflager_glut_glutWireSphere.c\
Java_com_pflager_glut_glutWireTeacup.c\
Java_com_pflager_glut_glutWireTeapot.c\
Java_com_pflager_glut_glutWireTeaspoon.c\
Java_com_pflager_glut_glutWireTetrahedron.c\
Java_com_pflager_glut_glutWireTorus.c
